--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -5,8 +5,8 @@
 
     --mainBg-color: #000;
     --mainColor100-color: #DAFDFF;
-    --mainColor200-color: #9efaff;
-    --mainColor300-color: #41fffc;
+    --mainColor200-color: #bdfcff;
+    --mainColor300-color: #6afffd;
 
     --subColor100-color: #ababab;
     --subColor200-color: #ababab;
