--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -6,10 +6,234 @@
   color: var(--white);
 }
 
+@media (max-width: 700px) {
+  #work {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #work .banner {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    overflow-x: hidden;
+    align-items: center;
+  }
+  #work .banner span {
+    font-size: 25px;
+    padding: 0 20px;
+    white-space: nowrap;
+  }
+  #work .banner span:nth-child(2) {
+    font-size: 18px;
+  }
+  #work .inner {
+    width: 100%;
+    margin-top: 5%;
+    overflow-x: hidden;
+  }
+  #work .inner .inner-box {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: 100%;
+  }
+  #work .inner .work-desc {
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 100px;
+  }
+  #work .inner .work-desc .work-title {
+    color: var(--mainColor100-color);
+    font-size: 5rem;
+    font-weight: 300;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+  }
+  #work .inner .work-desc .desc-index {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  #work .inner .work-desc .desc-index li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: var(--black);
+    opacity: 0;
+  }
+  #work .inner .work-desc .desc-index li.on {
+    opacity: 1;
+  }
+  #work .inner .work-desc .desc-index li:nth-child(8) p {
+    line-height: 230px;
+  }
+  #work .inner .work-desc .desc-index li a {
+    display: block;
+    color: #fff;
+  }
+  #work .inner .work-desc .desc-index li a p {
+    color: var(--mainColor100-color);
+    font-size: 7rem;
+    font-weight: 300;
+  }
+  #work .inner .work-desc .desc-index li a b {
+    font-size: 1.5rem;
+    display: block;
+    padding: 0 5px;
+  }
+  #work .inner .work-list {
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  #work .inner .work-list li {
+    border: 1px solid #ffffff;
+    width: 100%;
+    height: 150px;
+  }
+  #work .inner .work-list li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  #work .inner .work-list li a img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    filter: brightness(0.5);
+    transition: 0.7s;
+  }
+  #work .inner .work-list li a.on img {
+    filter: brightness(1);
+  }
+  #work .inner .work-list li a:hover img {
+    transform: scale(1.07);
+  }
+}
+@media (min-width: 701px) {
+  #work {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #work .banner {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+  }
+  #work .banner span {
+    font-size: 25px;
+    padding: 0 25px;
+  }
+  #work .banner span:nth-child(2) {
+    font-size: 18px;
+  }
+  #work .inner {
+    width: 100%;
+    margin-top: 5%;
+    overflow-x: hidden;
+  }
+  #work .inner .inner-box {
+    width: 90%;
+    position: relative;
+    left: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: 100%;
+  }
+  #work .inner .work-desc {
+    display: flex;
+    align-items: center;
+    padding: 0 5%;
+    position: relative;
+    height: 180px;
+  }
+  #work .inner .work-desc .work-title {
+    color: var(--mainColor100-color);
+    font-size: 7.5rem;
+    font-weight: 300;
+    position: absolute;
+  }
+  #work .inner .work-desc .desc-index {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  #work .inner .work-desc .desc-index li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: var(--black);
+    opacity: 0;
+  }
+  #work .inner .work-desc .desc-index li.on {
+    opacity: 1;
+  }
+  #work .inner .work-desc .desc-index li:nth-child(8) p {
+    line-height: 230px;
+  }
+  #work .inner .work-desc .desc-index li a {
+    display: block;
+    color: #fff;
+  }
+  #work .inner .work-desc .desc-index li a p {
+    color: var(--mainColor100-color);
+    font-size: 7rem;
+    font-weight: 300;
+  }
+  #work .inner .work-desc .desc-index li a b {
+    font-size: 1.5rem;
+    display: block;
+    padding: 0 5px;
+  }
+  #work .inner .work-list {
+    gap: 30px;
+  }
+  #work .inner .work-list li {
+    border: 1px solid #ffffff;
+    border-radius: 25px;
+    width: 500px;
+  }
+  #work .inner .work-list li a {
+    display: block;
+    border-radius: 25px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  #work .inner .work-list li a img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    filter: brightness(0.5);
+    transition: 0.7s;
+  }
+  #work .inner .work-list li a.on img {
+    filter: brightness(1);
+  }
+  #work .inner .work-list li a:hover img {
+    transform: scale(1.07);
+  }
+}
 @media (min-width: 1100px) {
   #work {
     width: 100%;
-    border: 1px solid #ff0000;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -32,7 +256,6 @@
     width: 100%;
     height: 400px;
     margin-top: 5%;
-    border: 1px solid #00ffd0;
     overflow-x: hidden;
   }
   #work .inner .inner-box {
@@ -40,20 +263,67 @@
     position: relative;
     left: 5%;
     display: flex;
+    flex-direction: row;
     gap: 50px;
     height: 100%;
   }
   #work .inner .work-desc {
     display: flex;
     align-items: center;
-    padding: 0 5%;
-    border: 1px solid #ffffff;
+    position: relative;
     background-color: var(--black);
+    width: 100%;
+    height: 100%;
   }
-  #work .inner .work-desc p {
+  #work .inner .work-desc .work-title {
     color: var(--mainColor100-color);
     font-size: 7.5rem;
     font-weight: 300;
+    position: absolute;
+  }
+  #work .inner .work-desc .work-title span {
+    display: block;
+  }
+  #work .inner .work-desc .desc-index {
+    width: 330px;
+    height: 100%;
+    position: relative;
+  }
+  #work .inner .work-desc .desc-index li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--black);
+    opacity: 0;
+  }
+  #work .inner .work-desc .desc-index li.on {
+    opacity: 1;
+  }
+  #work .inner .work-desc .desc-index li:nth-child(8) p {
+    line-height: 230px;
+  }
+  #work .inner .work-desc .desc-index li a {
+    display: block;
+    color: #fff;
+  }
+  #work .inner .work-desc .desc-index li a p {
+    color: var(--mainColor100-color);
+    font-size: 6.3rem;
+    font-weight: 300;
+    height: 150px;
+  }
+  #work .inner .work-desc .desc-index li a p.br {
+    height: 230px;
+  }
+  #work .inner .work-desc .desc-index li a b {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.7rem;
   }
   #work .inner .work-list {
     gap: 30px;
