--- a/src/css/pages/intro.css
+++ b/src/css/pages/intro.css
@@ -27,6 +27,7 @@
   background-color: var(--black);
   display: flex;
   align-items: center;
+  font-family: var(--font-family-Eng);
 }
 #intro .inner {
   width: 90%;
