--- a/src/css/pages/scss/contact.scss
+++ b/src/css/pages/scss/contact.scss
@@ -8,6 +8,7 @@
 
             h2 {
                 color: var(--mainColor100-color);
+                font-family: var(--font-family-Eng);
             }
 
             p {
@@ -23,6 +24,7 @@
         .contact-endless {
             .endless {
                 color: var(--mainColor100-color);
+                font-family: var(--font-family-Eng);
             }
 
             .white {
