--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -2,6 +2,7 @@
     background-color: var(--black);
     color: var(--white);
     height: 70vh;
+    font-family: var(--font-family-Eng);
     .inner {
         width: 90%;
         height: 100%;
