--- a/src/css/pages/scss/intro.scss
+++ b/src/css/pages/scss/intro.scss
@@ -31,6 +31,7 @@
     background-color: var(--black);
     display: flex;
     align-items: center;
+    font-family: var(--font-family-Eng);
     
 
     .inner {
