--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -18,7 +18,8 @@
     --black200: #ccc;
     --black300: #2b2b2b;
 
-    font-family: var(--mainEng-font), var(--mainKor-font), var(--mainNum-font);
+    --font-family-Eng: var(--mainEng-font);
+    --font-family-Kor: var(--mainKor-font);
     font-size: 16px;
     line-height: 1.5;
     font-weight: 400;
@@ -26,8 +27,6 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
-
-
 }
 
 body {
