--- a/src/css/pages/footer.css
+++ b/src/css/pages/footer.css
@@ -2,6 +2,7 @@
   background-color: var(--black);
   color: var(--white);
   height: 70vh;
+  font-family: var(--font-family-Eng);
 }
 #footer .inner {
   width: 90%;
