--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -5,14 +5,103 @@
     display: flex;
     align-items: center;
 
+    .inner {
+        .project-title {
+            .project-mn {
+                >div {
+                    font-family: var(--font-family-Eng);
+                }
+
+                .text {
+                    font-family: var(--font-family-Eng);
+                }
+            }
+
+            .txt {
+                span {
+                    color: var(--mainColor200-color);
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .project-slide {
+            .project-inner {
+                .slide-area {
+                    ul {
+                        li {
+                            .img {
+                                border-radius: 20px;
+                            }
+                        }
+                    }
+
+                    .project_slide_l {
+                        .swiper-wrapper {
+                            li {
+                                display: flex;
+                                gap: 50px;
+                                opacity: 0 !important;
+                                align-items: center;
+                                pointer-events: all;
+                                transition: .35s;
+
+                                &.on {
+                                    opacity: 1 !important;
+                                    z-index: 99;
+                                }
+                        
+                                .txt {
+                                    position: relative;
+                                    padding-top: 40px;
+                                    width: 330px;
+                                    text-align: left;
+                                    z-index: 99;
+                                    span {
+                                        font-family: var(--font-family-Eng);
+                                    }
+
+                                    >div {
+                                        gap: 8px;
+
+                                        em {
+                                            position: relative;
+
+                                            &:hover::after {
+                                                transform: scale(1);
+                                            }
+
+                                            &::after {
+                                                content: '';
+                                                position: absolute;
+                                                width: 100%;
+                                                height: 1px;
+                                                background-color: var(--white);
+                                                left: 0;
+                                                bottom: 0;
+                                                transform: scale(0);
+                                                transition: .35s;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 }
-#project .inner .project-slide .project-inner .slide-area ul li .img {
-    border-radius: 20px;
-}
+
+
+
 
 @media (max-width:700px) {
     #project {
-        height: 100vh;
+        height: 100%;
+        padding: 10% 0;
 
         .inner {
             width: 100%;
@@ -124,17 +213,19 @@
                                             font-size: 15px;
                                             line-height: 1.5rem;
                                             font-weight: 600;
-                                            font-family: "Alumni Sans";
                                             padding: 10px 0;
                                         }
 
                                         b,
                                         span,
                                         em {
-                                            display: block
+                                            display: block;
+                                            padding: 5px;
                                         }
-                                        span{
-                                        font-size: 2.2rem;}
+
+                                        span {
+                                            font-size: 2.2rem;
+                                        }
                                     }
                                 }
                             }
@@ -283,9 +374,12 @@
                                     gap: 50px;
                                     opacity: 0 !important;
                                     align-items: center;
+                                    pointer-events: all;
+                                    transition: .35s;
 
                                     &.on {
                                         opacity: 1 !important;
+                                        z-index: 99;
                                     }
 
                                     .txt {
@@ -293,13 +387,13 @@
                                         padding-top: 40px;
                                         width: 330px;
                                         text-align: left;
+                                        z-index: 99;
 
                                         p {
                                             display: block;
                                             font-size: 16px;
                                             line-height: 30px;
                                             font-weight: 600;
-                                            font-family: "Alumni Sans";
                                             line-height: 1.5rem;
                                             padding-bottom: 10px;
                                         }
@@ -307,7 +401,7 @@
                                         b,
                                         span,
                                         em {
-                                            padding-right: 10px;
+                                            padding: 3px;
                                             display: block
                                         }
 
@@ -322,7 +416,7 @@
                             .slide_arrow {
                                 position: absolute;
                                 left: 400px;
-                                top: 320px;
+                                top: 330px;
                                 cursor: pointer;
                                 z-index: 9;
 
@@ -330,8 +424,8 @@
                                     display: inline-flex;
                                     justify-content: center;
                                     align-items: center;
-                                    width: 70px;
-                                    height: 70px;
+                                    width: 50px;
+                                    height: 50px;
                                     color: #fff;
                                     transition: all .3s;
 
@@ -460,41 +554,29 @@
 
                             .swiper-wrapper {
                                 li {
-                                    display: flex;
-                                    gap: 50px;
-                                    opacity: 0;
-                                    align-items: center;
-
-                                    &.on {
-                                        opacity: 1;
-                                    }
 
                                     .txt {
-                                        position: relative;
-                                        padding-top: 40px;
-                                        width: 330px;
+
 
                                         p {
                                             display: block;
                                             font-size: 16px;
                                             line-height: 30px;
                                             font-weight: 600;
-                                            font-family: "Alumni Sans";
-
-                                            br {
-                                                display: none;
-                                            }
+                                            line-height: 1.5rem;
+                                            padding-bottom: 10px;
                                         }
 
                                         b,
                                         span,
                                         em {
-                                            padding-right: 10px;
+                                            padding: 3px;
                                             display: block
                                         }
 
                                         span {
-                                            font-size: 4rem;
+                                            font-size: 3rem;
+                                            padding: 10px 0;
                                         }
                                     }
                                 }
@@ -503,7 +585,7 @@
                             .slide_arrow {
                                 position: absolute;
                                 left: 400px;
-                                top: 320px;
+                                top: 350px;
                                 cursor: pointer;
                                 z-index: 9;
 
@@ -511,8 +593,8 @@
                                     display: inline-flex;
                                     justify-content: center;
                                     align-items: center;
-                                    width: 70px;
-                                    height: 70px;
+                                    width: 50px;
+                                    height: 50px;
                                     color: #fff;
                                     transition: all .3s;
 
