--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -1,15 +1,40 @@
 #work {
     background-color: var(--black);
+    width: 100%;
 
     .banner {
         background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
         color: var(--white);
     }
+
+    .banner {
+        font-family: var(--font-family-Eng);
+        contain: paint; 
+
+        .splide__track {
+            .splide__list {
+                display: flex;
+                align-items: center;
+
+                .splide__slide {
+                    padding: 5px 20px;
+                    white-space: nowrap;
+                }
+            }
+        }
+
+    }
+
+    .work-title {
+        font-family: var(--font-family-Eng);
+    }
+    .work-list{
+        contain: paint;
+    }
 }
 
 @media (max-width:700px) {
     #work {
-        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -21,21 +46,29 @@
             overflow-x: hidden;
             align-items: center;
 
-            span {
-                font-size: 25px;
-                padding: 0 20px;
-                white-space: nowrap;
+            .splide__track {
+                .splide__list {
+                    display: flex;
+                    align-items: center;
 
-                &:nth-child(2) {
-                    font-size: 18px;
+                    .splide__slide {
+                        padding: 5px 20px;
+                        font-size: 25px;
+
+                        &:nth-child(2) {
+                            font-size: 18px;
+                        }
+                    }
                 }
             }
+
         }
 
         .inner {
             width: 100%;
             margin-top: 5%;
             overflow-x: hidden;
+
             .inner-box {
                 width: 100%;
                 position: relative;
@@ -61,12 +94,12 @@
                 }
 
                 .desc-index {
-                    width: 100%; 
+                    width: 100%;
                     height: 100%;
                     position: relative;
 
                     li {
-                        position: absolute; 
+                        position: absolute;
                         top: 0;
                         left: 0;
                         width: 100%;
@@ -76,7 +109,7 @@
                         background-color: var(--black);
                         opacity: 0;
 
-                    
+
                         &.on {
                             opacity: 1;
                         }
@@ -145,7 +178,6 @@
 
 @media (min-width:701px) {
     #work {
-        width: 100%;
         height: 100vh;
         display: flex;
         flex-direction: column;
@@ -157,12 +189,19 @@
             display: flex;
             align-items: center;
 
-            span {
-                font-size: 25px;
-                padding: 0 25px;
+            .splide__track {
+                .splide__list {
+                    display: flex;
+                    align-items: center;
 
-                &:nth-child(2) {
-                    font-size: 18px;
+                    .splide__slide {
+                        padding: 5px 20px;
+                        font-size: 25px;
+
+                        // &:nth-child(2) {
+                        //     font-size: 18px;
+                        // }
+                    }
                 }
             }
         }
@@ -174,7 +213,6 @@
 
 
             .inner-box {
-                width: 90%;
                 position: relative;
                 left: 5%;
                 display: flex;
@@ -187,9 +225,11 @@
                 display: flex;
                 align-items: center;
                 padding: 0 5%;
-
                 position: relative;
-                height: 180px;
+                left: 0;
+                justify-content: center;
+
+                z-index: 999;
 
                 .work-title {
                     color: var(--mainColor100-color);
@@ -202,6 +242,8 @@
                     width: 100%;
                     height: 100%;
                     position: relative;
+                    z-index: 999;
+
 
                     li {
                         position: absolute;
@@ -214,7 +256,7 @@
                         background-color: var(--black);
                         opacity: 0;
 
-                    
+
                         &.on {
                             opacity: 1;
                         }
@@ -283,7 +325,6 @@
 
 @media (min-width:1100px) {
     #work {
-        width: 100%;
         height: 100vh;
         display: flex;
         flex-direction: column;
@@ -295,32 +336,38 @@
             display: flex;
             align-items: center;
 
-            span {
-                font-size: 2.8rem;
-                padding: 0 25px;
+            .splide__track {
+                .splide__list {
+                    display: flex;
+                    align-items: center;
 
-                &:nth-child(2) {
-                    font-size: 1.8rem;
+                    .splide__slide {
+                        padding: 5px 20px;
+                        font-size: 2.8rem;
+
+                        // &:nth-child(2) {
+                        //     font-size: 1.5rem;
+                        // }
+                    }
                 }
             }
+
         }
 
         .inner {
             width: 100%;
-            height: 400px;
+            height: 420px;
             margin-top: 5%;
             overflow-x: hidden;
 
 
             .inner-box {
-                width: 90%;
+                width: 100%;
                 position: relative;
-                left: 5%;
+                left: 0%;
                 display: flex;
-
                 flex-direction: row;
                 gap: 50px;
-                height: 100%;
             }
 
             .work-desc {
@@ -336,7 +383,6 @@
                     font-size: 7.5rem;
                     font-weight: 300;
                     position: absolute;
-
 
                     span {
                         display: block;
@@ -381,7 +427,8 @@
                                 font-size: 6.3rem;
                                 font-weight: 300;
                                 height: 150px;
-                                &.br{
+
+                                &.br {
                                     height: 230px;
                                 }
                             }
