--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -9,7 +9,7 @@
 
     .banner {
         font-family: var(--font-family-Eng);
-        contain: paint; 
+        contain: paint;
 
         .splide__track {
             .splide__list {
@@ -25,10 +25,11 @@
 
     }
 
-    .work-title {
+    .work-title,.desc-index {
         font-family: var(--font-family-Eng);
     }
-    .work-list{
+
+    .work-list {
         contain: paint;
     }
 }
@@ -198,9 +199,6 @@
                         padding: 5px 20px;
                         font-size: 25px;
 
-                        // &:nth-child(2) {
-                        //     font-size: 18px;
-                        // }
                     }
                 }
             }
@@ -228,7 +226,6 @@
                 position: relative;
                 left: 0;
                 justify-content: center;
-
                 z-index: 999;
 
                 .work-title {
@@ -260,6 +257,12 @@
                         &.on {
                             opacity: 1;
                         }
+                        &.on p{
+                           transform: translateY(0);
+                        }
+                        &.on b{
+                           transform: translateY(0);
+                        }
 
                         &:nth-child(8) {
                             p {
@@ -276,12 +279,16 @@
                                 color: var(--mainColor100-color);
                                 font-size: 7rem;
                                 font-weight: 300;
+                                transform: translateY(100px);
+                                transition: .35s;
                             }
 
                             b {
                                 font-size: 1.5rem;
                                 display: block;
                                 padding: 0 5px;
+                                transform: translateY(100px);
+                                transition: .45s;
                             }
                         }
                     }
@@ -291,33 +298,40 @@
             .work-list {
                 gap: 30px;
 
-                li {
-                    border: 1px solid #ffffff;
-                    border-radius: 25px;
-                    width: 500px;
+                >div {
+                    gap: 30px;
+                    transform: translateX(12%);
 
-                    a {
-                        display: block;
+                    li {
+                        border: 1px solid #ffffff;
                         border-radius: 25px;
-                        width: 100%;
-                        height: 100%;
-                        overflow: hidden;
+                        width: 500px;
 
-                        img {
-                            object-fit: cover;
-                            filter: brightness(.5);
-                            transition: .7s;
-                        }
+                        a {
+                            display: block;
+                            border-radius: 25px;
+                            width: 100%;
+                            height: 100%;
+                            overflow: hidden;
 
-                        &.on img {
-                            filter: brightness(1);
-                        }
+                            img {
+                                object-fit: cover;
+                                filter: brightness(.5) blur(3px);
+                                transition: .5s;
+                            }
 
-                        &:hover img {
-                            transform: scale(1.07);
+                            &.on img {
+                                filter: brightness(1) blur(0);
+                            }
+
+                            &:hover img {
+                                transform: scale(1.07);
+                            }
                         }
                     }
                 }
+
+
             }
         }
     }
@@ -345,9 +359,7 @@
                         padding: 5px 20px;
                         font-size: 2.8rem;
 
-                        // &:nth-child(2) {
-                        //     font-size: 1.5rem;
-                        // }
+
                     }
                 }
             }
@@ -356,7 +368,7 @@
 
         .inner {
             width: 100%;
-            height: 420px;
+            height: 450px;
             margin-top: 5%;
             overflow-x: hidden;
 
@@ -444,36 +456,41 @@
             }
 
             .work-list {
-                gap: 30px;
 
-                li {
-                    border: 1px solid #ffffff;
-                    border-radius: 25px;
-                    width: 500px;
+                >div {
+                    gap: 30px;
+                    transform: translateX(12%);
 
-
-                    a {
-                        display: block;
+                    li {
+                        border: 1px solid #ffffff;
                         border-radius: 25px;
-                        width: 100%;
-                        height: 100%;
-                        overflow: hidden;
+                        width: 500px;
 
-                        img {
-                            object-fit: cover;
-                            filter: brightness(.5);
-                            transition: .7s;
-                        }
+                        a {
+                            display: block;
+                            border-radius: 25px;
+                            width: 100%;
+                            height: 100%;
+                            overflow: hidden;
 
-                        &.on img {
-                            filter: brightness(1);
-                        }
+                            img {
+                                object-fit: cover;
+                                filter: brightness(.5) blur(3px);
+                                transition: .7s;
+                            }
 
-                        &:hover img {
-                            transform: scale(1.07);
+                            &.on img {
+                                filter: brightness(1) blur(0);
+                            }
+
+                            &:hover img {
+                                transform: scale(1.07);
+                            }
                         }
                     }
                 }
+
+
             }
         }
     }
